# OpenPlot

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish-pypi.yml  release-macos-arm64.yml  release-windows-x64.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  types.ts
packaging/linux/: build_app.sh  build_appimage.sh  build_appimage_on_nix.sh  bundle_runtime_libs.py  openplot.desktop
packaging/macos/: build_app.sh  (+4 more)
tests/: conftest.py  test_cli.py  test_desktop.py  test_executor.py  test_feedback.py  test_fix_jobs.py  test_mcp_server.py  test_nix_hash_sync.py  test_package_version.py  test_plot_mode.py  test_python_interpreter.py  test_release_versioning.py  test_runtime_text.py  test_server_event_wrappers.py  test_server_fix_execution_wrappers.py  test_server_path_picker_wrappers.py  test_server_plot_mode_inference_wrappers.py  test_server_plot_mode_message_wrappers.py  test_server_plot_mode_planning_wrappers.py  test_server_plot_mode_profiles_wrappers.py  test_server_plot_mode_review_wrappers.py  test_server_plot_mode_state_wrappers.py  test_server_python_runtime_wrappers.py  test_server_response_utils_wrappers.py  test_server_runner_io_wrappers.py  test_server_runner_residual_wrappers.py  test_server_runner_wrappers.py  test_server_runtime_bootstrap_wrappers.py  test_server_sessions_misc_wrappers.py  test_server_version_artifacts_wrappers.py  test_sessions.py  test_version_control.py  test_ws_protocol.py
(+125 files in other folders)
